--- a/potrfolio/index.html
+++ b/potrfolio/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header class="header">
-        <div class="container <!-- тут добавить класс -->header__container" >
+        <div class="container header__container" >
         
 
             <address class="header__contacts container">
@@ -21,8 +22,10 @@
                     <li class="contacts__item"></li>
                         <p class="contacts__head">Email</p>
                         <a href="mailto:kea-asd@yandex.ru" class="contacts__link">kea-asd@yandex.ru</a>
+                    
                     <li class="contacts__item"></li>
-                        <p class="contacts__head">Соц. сети</p>
+
+                        <p class="contacts__head contacts__head_social">Соц. сети</p>
                         <a href="tel:+79293398016" class="contacts__link">+7 (929) - 339 - 8016</a>
                             <ul class="contacts__social-list">
                                 <li class="contacts__social-item">
