--- a/potrfolio/index.html
+++ b/potrfolio/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css">
 </head>
-<body>
-    <header class="header">
-        <div class="container header__container" >
-        
+<body class="page">
+    <header class="page__header header">
+        <div class="container header__container">
+            <img class="header__logo" src="img/logo.svg" alt="логотип Евгена">
 
-            <address class="header__contacts container">
+            <address class="header__contacts contacts">
                 <ul class="contacts__list">
                     <li class="contacts__item">
                         <p class="contacts__head">Телефон</p>
@@ -25,8 +25,7 @@
                     
                     <li class="contacts__item"></li>
 
-                        <p class="contacts__head contacts__head_social">Соц. сети</p>
-                        <a href="tel:+79876543210" class="contacts__link">+7 (987) - 654 - 3210</a>
+                        <p class="contacts__head contacts__head_social">Соц. сети</p>                        
                             <ul class="contacts__social-list">
                                 <li class="contacts__social-item">
                                     <a href="#" class="contacts__social-link contacts__social-link_whatsup"></a>
@@ -53,7 +52,7 @@
     <main>
         <section class="present">
             <div class="container">
-                <img src="img/Korotin.jpg" alt="логотип Евгения" class="header__logo">  
+                <img src="img/Korotin.jpg" alt="логотип Евгения" class="present__photo">  
                 <div class="present__contant">
                     <hgroup class="present__group-title">
                         <h1 class="present__title">Коротин Евгений</h1>
