--- a/potrfolio/index.html
+++ b/potrfolio/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
 <body class="page">
     <header class="page__header header">
         <div class="container header__container">
-            <img class="header__logo" src="img/logo.svg" alt="логотип Евгена">
+            <img class="header__logo" src="img/logo.svg" alt="логотип Евгена" width="445px" height="668px">
 
             <address class="header__contacts contacts">
                 <ul class="contacts__list">
@@ -65,17 +65,17 @@
             </div>
         </section>
 
-        <section class="advantege">
+        <section class="advantage">
             <div class="container">
-                <h2 class="advantege__item">Почему я</h2>
-                <ul class="advantege__list">
-                    <li class="advantege__item advantege__item_stack">Стек: HTML, CSS, PHP, JavaScript, React</li>
-                    <li class="advantege__item advantege__item_mockup">Создам mockup под ваш проект</li>
-                    <li class="advantege__item advantege__item_inclusive">Инклюзивность</li>
-                    <li class="advantege__item advantege__item_adapt">Адаптивная и кроссбраузерная вёрстка
+                <h2 class="advantage__item">Почему я</h2>
+                <ul class="advantage__list">
+                    <li class="advantage__item advantage__item_stack">Стек: HTML, CSS, PHP, JavaScript, React</li>
+                    <li class="advantage__item advantage__item_mockup">Создам mockup под ваш проект</li>
+                    <li class="advantage__item advantage__item_inclusive">Инклюзивность</li>
+                    <li class="advantage__item advantage__item_adapt">Адаптивная и кроссбраузерная вёрстка
                     </li>
-                    <li class="advantege__item advantege__item_clear">Чистый валидный код</li>
-                    <li class="advantege__item advantege__item_copyright">Копирайтинг</li>
+                    <li class="advantage__item advantage__item_clear">Чистый валидный код</li>
+                    <li class="advantage__item advantage__item_copyright">Копирайтинг</li>
                 </ul>
             </div>
         </section>
