--- a/potrfolio/index.html
+++ b/potrfolio/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css">
     
-    <link defer href="js/swiper-bundle.min.js">
-    <link defer href="js/index.js">
+    <link defer src="js/index.js">
+    <link defer src="js/swiper-bundle.min.js">
+    
 </head>
 <body class="page">
     <header class="page__header header">
